[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytexmk"
dynamic = ["version"]
authors = [
  { name = "焱铭", email = "lxb-yanming@foxmail.com" },
]
description = "LaTeX 辅助编译命令行工具 LaTeX Auxiliary Compilation Command Line Tool"
keywords = ["LaTeX", "build", "latexmk"]
dependencies = ["rich", "rich_argparse", "pypdf", "toml", "packaging"]
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/YanMing-lxb/PyTeXMK"
"Bug Tracker" = "https://github.com/YanMing-lxb/PyTeXMK/issues"

[project.scripts]
pytexmk = "pytexmk:main"

[tool.setuptools.dynamic]
version = {attr = "pytexmk.version.__version__"}

[tool.setuptools.package-data]
"pytexmk.data" = ["README.html","*.toml"]
pytexmk = ["locale/en/LC_MESSAGES/*.mo"]