[build-system]
requires = ["setuptools>=68.0", "build>=1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytexmk"
dynamic = ["version"]
authors = [
  { name = "焱铭", email = "lxb-yanming@foxmail.com" },
]
description = "LaTeX 辅助编译命令行工具 LaTeX Auxiliary Compilation Command Line Tool"
keywords = ["LaTeX", "build", "latexmk"]
dependencies = [
  "rich",
  "rich_argparse",
  "pypdf>=6.0.0",
  "toml>=0.10.2",
  "packaging>=24.0",
  "watchdog>=4.0.0",
]
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/YanMing-lxb/PyTeXMK"
"Bug Tracker" = "https://github.com/YanMing-lxb/PyTeXMK/issues"

[project.scripts]
pytexmk = "pytexmk.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.5.0",
  "pyinstaller>=6.0.0",
]

[tool.setuptools.dynamic]
version = {attr = "pytexmk.version.__version__"}

[tool.setuptools.package-data]
"pytexmk.data" = ["README.html", "*.toml"]
"pytexmk" = ["locale/**/*.mo", "locale/**/*.pot"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
extend-ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
  "unit: 单元测试",
  "integration: 集成测试",
  "regression: 回归测试",
  "xindy: xindy 相关测试",
  "slow: 标记慢测试（真实编译）",
  "requires_latex: 需要 TeX 环境的测试",
]
